--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ h3 {
   margin: 0 auto;
   padding: 0 30px;
   color: #33ff66;
+  text-shadow: 4px 4px 10px #ff00f2;
 }
 
 body {
@@ -36,7 +37,9 @@ main {
 .console {
     border: 5px solid black;
     padding: 1em;
-    background: #be2edd;
+    background: #4e4beb;
+    box-shadow: lightsalmon 0 0 6px 0;
+    border-radius: 3px;
     color: #fff;
 }
 
