--- a/src/style.css
+++ b/src/style.css
@@ -7,13 +7,17 @@ h1 {
 }
 
 h3 {
-  font-size: 20px;
+  font-size: 25px;
   line-height: 68px;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 30px;
   color: #33ff66;
   text-shadow: 4px 4px 10px #ff00f2;
+}
+
+h2 {
+  text-shadow: 5px 5px 10px #ff00f2;
 }
 
 body {
@@ -23,6 +27,25 @@ body {
     padding:0;
     margin:0;
     overflow-x: hidden;
+}
+
+.glow {
+
+  color: #ffffff;
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #eeeeee, 0 0 20px #000000, 0 0 30px #000000, 0 0 40px #000000,
+    0 0 50px #9554b3, 0 0 60px #9554b3, 0 0 70px #9554b3;
+  }
+  to {
+    text-shadow: 0 0 20px #eeeeee, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6,
+    0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+  }
 }
 
 main {
@@ -52,7 +75,7 @@ main {
 }
 
 #reload{
-    background: black;
+    background: #9554b3;
     color: #33ff66;
     font-family: 'Press Start 2P', cursive;
     margin: 1em;
